--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -1,4 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/8/n11709222.md#1" target="_blank">【思想领袖】专访《川普的白宫》一书作者</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/8/n11709222.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Epoch_Times9A6A2629-1-1200x775-150x120.jpg" align ="left"></a>英文《大纪元时报》资深记者杨杰凯（Jan Jekielek）在2019年11月21日对维吉尼亚州总统历史学家、《川普的白宫：他的总统生涯的真实故事》一书作者道格?韦德（Doug Wead）进行了专访。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/8/n11709186.md#1" target="_blank">杨千嬅在综艺节目中爆哭 自嘲像娱乐圈的怪物</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/8/n11709186.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/04/150512084044100311-150x120.jpg" align ="left"></a>一向以活泼开朗个性示人的香港艺人杨千嬅，近日在大陆综艺节目《妻子的浪漫旅行3》中大谈婚前婚后的变化，并一度曾因朋友的渐行渐远讲到大哭，自嘲“像娱乐圈怪物”，令其在场外的丈夫丁子高看到后非常心疼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/7/n11707612.md#1" target="_blank">猞猁咬死5只鸡被打死 两甘肃男获刑惹争议</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/7/n11707612.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/lynx-988882_1920-150x120.jpg" align ="left"></a>一只野生保护动物猞猁，闯入甘肃祁连山一个养殖棚咬死五只鸡。两男子将猞猁打死，近日皆被判刑、罚款，舆论哗然，有网民表示：人不如动物？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/7/n11706982.md#1" target="_blank">上海财大副教授被举报性骚扰女生 引爆网络</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/7/n11706982.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/045-150x120.jpg" align ="left"></a>日前，上海财经大学会计学院钱姓副教授被指性骚扰女学生，引发网络关注。
 
@@ -18,8 +20,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11701034.md#1" target="_blank">失联20年的北大博士后回应家人：别再找了</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11701034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled2-150x120.jpg" align ="left"></a>“失联20年”的北大博士后找到了！他现在美国，但却对家人说不要再通过媒体找他了，并说了7个字“清官难断家务事”，让外界匪夷所思。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 3:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11700590.md#1" target="_blank">揭中共介选十样态 台立委：急需反渗透法</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11700590.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e6c5e7d526d4cd086308faa90dfc0516-150x120.jpg" align ="left"></a>2020总统选举进入倒数，中共介选问题备受各界关注。民进党立委李俊俋4日表示，从台湾首次民选总统起，中共便极力介入台湾选举，继1996年“武吓”、2000年“文攻”及2012年“以商逼政”后，中共介选手法推陈出新，包括骇客攻击、资讯操控等10种新样态，吁台湾人提高警觉，并盼尽速通过“反渗透法”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11699495.md#1" target="_blank">纽约海关今年查获假货 大部分来自中国</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11699495.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/b7798355ec5646f32805f38dbb8e96f0-150x120.jpg" align ="left"></a>美国海关与边境保护局（CBP）纽约办事处3日在曼哈顿世贸中心召开年度总结记者会。记者会上，CBP展示一年来查获的各种各样仿冒品，包括最新款的山寨苹果iPhone 11 Pro、三星Note 10 plus手机、Gucci与LOUIS VUITTON皮包，及要价不菲的劳力士和Audemars Piguet手表。官员表示，大部分各类山寨品皆来自中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11698134.md#1" target="_blank">曾目睹高以翔骤逝 黄景瑜沉寂多日后憔悴现身</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11698134.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1604100956401487-150x120.jpg" align ="left"></a>曾目睹台湾艺人高以翔骤逝过程的大陆男星黄景瑜，12月2日在品牌活动上憔悴现身。沉寂多天后复工的他，脸色凝重，声音沙哑，整个人暴瘦了一圈，让不少粉丝心疼他对好友的离世不知有多自责。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 8:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11698517.md#1" target="_blank">“豫章书院事件”持续 成都与北京再曝虐童案</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11698517.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2-4-150x120.jpg" align ="left"></a>江西南昌虐打体罚学生事件在两年前曝光之后，该事件还未得到彻底解决，志愿者与爆料人纷纷受到威胁之际，近日，北京明声听力康复中心与四川成都嘉年华青少年心理辅导中心也被爆虐童。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/8/n11708050.md#1" target="_blank">四川男子双手发黑疑患血栓 医生：裤子掉色</a><br></h3>近日，四川泸州一名男子前往医院就诊，称自己双手突然发黑，认为自己患了血栓。医生让他用肥皂洗手两次后，他的皮肤恢复了正常，原来这是男子的裤子掉色所致。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/8/n11707999.md#1" target="_blank">深圳两幼童身上淤青不断 竟是皮肤内有虫</a><br></h3>最近，深圳两名小兄妹身上反复出现淤青，且每次淤青的位置都不定，于是被送往医院检查。据医生介绍，小兄妹被确诊为绦虫类囊虫病，虫子进入人体后在体内到处游走，导致皮出现结节和轻微淤青。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/8/n11707874.md#1" target="_blank">每日三退声明精选（2019/12/07）</a><br></h3>我“六四”时就想退出共产党，当时把党委的领导吓得够呛，硬劝结果没退成。因为家庭背景是高干，我对共产党看得很透了，也看了“九评共产党”。现在我声明退出入过的党团队一切共产党的组织，与邪恶彻底决裂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 10:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/7/n11707704.md#1" target="_blank">业绩差 南宁一公司多名员工穿内裤寒风中罚站</a><br></h3>近日广西南宁最低气温约10℃，有市民看到，在当街有几名男子只穿着内裤，站在寒风中瑟瑟发抖，还有人拿着棍子在旁边训话。据悉是某传媒公司的员工因业绩差而遭罚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 7:24 AM							</td></tr>
@@ -32,6 +33,5 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/5/n11701612.md#1" target="_blank">被爆扫楼式筹款 “水滴筹”陷信用危机</a><br></h3>中国重病众筹平台“水滴筹”近日被曝陷入信任危机，平台审查不严格，又没有相关法律对互联网筹款平台进行监管，民众担心捐款人被消费、被欺骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/5/n11701627.md#1" target="_blank">每日三退声明精选（2019/12/04）</a><br></h3>从近几个月香港的反送中运动，看出港府与中共的残暴，暴露出其流氓本性的一面。同时也让我看到美国政府和人民善良友好、尊重人权民主的普世价值的立国理念。我决定不与邪恶为伍，站在正义者一边，退出邪恶的团、队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 10:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11699885.md#1" target="_blank">地陷埋3人后 广州又一处路面发生塌陷</a><br></h3>继12月1日，广州市大道北与禺东西路交界处发生地面塌陷后，12月3日，番禺南村镇番禺大道南往北方向一处人行道上也发生地面塌陷。不过，无人员伤亡。而此前的塌陷导致3人被埋，当局直接往坑中填水泥，受害人家属连日打横幅抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:05 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11699099.md#1" target="_blank">每日三退声明精选（2019/12/03）</a><br></h3>我的父亲在毛贼东及中共的欺骗下曾为中共军队作战一度几乎成为了中共的炮灰。中共野蛮地所做所为为全世界人民所震惊。中国人民只有彻底推翻共产党才能看到希望。中共在多年的统治中残害了大量无辜的百姓，吞噬了大量无辜的生命。我很高兴未曾加入过邪恶的中国共产党。在此强烈声明立刻退出中国少先队、中国共青团和中共匪的任何一切组织。我要做一个清清白白的人。希望正义的美国和善良的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_4.md#1<br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_4.htm">http://www.epochtimes.com/gb/ncid282_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
